# InterpretabilityWorkbench

./: .gitignore  COMPLETE_LOGGING_GUIDE.md  CRITICAL_FIXES_SUMMARY.md  DEPLOYMENT_README.md  FINAL_FIXES_SUMMARY.md  GOODFIRE_SAE_README.md  LOGGING_AND_PROGRESS_README.md  NGINX_DEPLOYMENT.md  PLAN.md  PROJECT_ANALYSIS.md  README.md  RUN_GUIDE.md  TRAINING_SPEED_OPTIMIZATIONS.md  UI_IMPROVEMENTS_SUMMARY.md  UI_PRD.md  VERIFICATION_GUIDE.md  __init__.py  deploy_nginx.sh  health_check.py  interpretability-workbench.service  log_analyzer.py  monitor_logs.py  nginx.conf  pyproject.toml  quick_verify.py  run.py  setup_logging.py  setup_python_env.sh  test_deployment_fixes.py  test_goodfire_sae.py  test_logging_and_progress.py  tutorial.ipynb
interpretability_workbench/: __init__.py  cache_manager.py  cli.py  eval.py  feature_provenance.py  goodfire_converter.py  lora_patch.py  sae_train.py  trace.py
interpretability_workbench/server/: __init__.py  api.py  websockets.py
tests/: __init__.py  test_api.py  test_trace.py
ui/: README.md  env.example  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.tsbuildinfo  vite.config.ts
ui/src/: App.tsx
ui/src/components/: InterpretabilityWorkbench.tsx
ui/src/components/ui/: drawer.tsx
ui/src/services/: api.ts  websocket.ts
